Not normal data test

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMG5OVPpp/sVElJLjbbMozI",
+      "authorship_tag": "ABX9TyODnuisnRxH5v7I1UufpRqy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6073,6 +6073,39 @@
       ],
       "metadata": {
         "id": "oRrckbk2RHQ6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Not normal data test\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "from scipy.stats import shapiro\n",
+        "from scipy.stats import friedmanchisquare\n",
+        "from scipy.stats import wilcoxon\n",
+        "\n",
+        "dataset = pd.read_csv('trip_d1_d2.csv', sep = ';')\n",
+        "\n",
+        "#sns.distplot(dataset['D1']);\n",
+        "#sns.distplot(dataset['D2']);\n",
+        "\n",
+        "alpha = 0.05\n",
+        "\n",
+        "shapiro(dataset['D1']), shapiro(dataset['D2'])\n",
+        "\"\"\"\n",
+        "((0.7708877921104431, 2.0186324036330916e-05),\n",
+        " (0.8890060782432556, 0.004569781478494406))\n",
+        "\"\"\"\n",
+        "\n",
+        "_, p = friedmanchisquare(dataset['D1'], dataset['D2']) #\n",
+        "_, p = wilcoxon(dataset['D1'], dataset['D2']) # 1.5312284726953685e-06\n",
+        "dataset['D1'].mean(), dataset['D2'].mean() # (0.7926100000000001, 0.798196666666667)\n"
+      ],
+      "metadata": {
+        "id": "OOKNG43lRjQg"
       },
       "execution_count": null,
       "outputs": []
