--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyODnuisnRxH5v7I1UufpRqy",
+      "authorship_tag": "ABX9TyONBDbVDHITODHsrHTh9XuG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6106,6 +6106,49 @@
       ],
       "metadata": {
         "id": "OOKNG43lRjQg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Correlation\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import math\n",
+        "\n",
+        "size = np.array([30, 39, 49, 60])\n",
+        "price = np.array([57000, 69000, 77000, 90000])\n",
+        "\n",
+        "dataset = pd.DataFrame({'size': size, 'price': price})\n",
+        "\n",
+        "mean_size = dataset['size'].mean() # 44.5\n",
+        "mean_price = dataset['price'].mean() # 73250.0\n",
+        "\n",
+        "std_size = dataset['size'].std() # 12.922847983320086\n",
+        "std_price = dataset['price'].std() # 13865.424623862047\n",
+        "\n",
+        "dataset['dif'] = (dataset['size'] - mean_size) * (dataset['price'] - mean_price)\n",
+        "\n",
+        "sum_dif = dataset['dif'].sum() # 535500.0\n",
+        "\n",
+        "covariance = sum_dif / (len(dataset) - 1) # 178500.0\n",
+        "\n",
+        "correlation_coefficient = covariance / (std_size * std_price) # coeficiente_correlacao\n",
+        "\n",
+        "coefficient_determination = math.pow(correlation_coefficient, 2)\n",
+        "\n",
+        "#Using numpy and pandas\n",
+        "np.cov(size, price)\n",
+        "\n",
+        "np.corrcoef(size, price)\n",
+        "\n",
+        "dataset.corr()"
+      ],
+      "metadata": {
+        "id": "py4q9pmlyyYe"
       },
       "execution_count": null,
       "outputs": []
