--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyONBDbVDHITODHsrHTh9XuG",
+      "authorship_tag": "ABX9TyN7qs4vn3fB9Y4LQDQQgeya",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6149,6 +6149,36 @@
       ],
       "metadata": {
         "id": "py4q9pmlyyYe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Correlation Yellowbrick\n",
+        "!pip install yellowbrick --upgrade\n",
+        "\n",
+        "from yellowbrick.target import FeatureCorrelation\n",
+        "\n",
+        "dataset = pd.read_csv('house_prices.csv')\n",
+        "dataset.drop(labels = ['id', 'date', 'sqft_living', 'sqft_lot'], axis = 1, inplace=True)\n",
+        "\n",
+        "graph = FeatureCorrelation(labels = dataset.columns[1:])\n",
+        "graph.fit(dataset.iloc[:, 1:16].values, dataset.iloc[:, 0].values)\n",
+        "graph.show();"
+      ],
+      "metadata": {
+        "id": "fxIaSwJ64HwI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1FHFpoWg4610"
       },
       "execution_count": null,
       "outputs": []
