--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN7qs4vn3fB9Y4LQDQQgeya",
+      "authorship_tag": "ABX9TyN0zR4fs/yDQjeSPNGPj1Np",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6176,7 +6176,56 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Linear regression\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import math\n",
+        "\n",
+        "dataset = pd.read_csv('house_prices.csv')\n",
+        "\n",
+        "dataset.drop(labels = ['id', 'date'], axis = 1, inplace=True)\n",
+        "\n",
+        "fig, ax = plt.subplots(figsize=(15,15))\n",
+        "ax = sns.heatmap(dataset.corr(), annot=True)\n",
+        "\n",
+        "math.pow(0.7, 2) # 0.48999999999999994\n",
+        "\n",
+        "#Simple linear regression\n",
+        "X = dataset['sqft_living'].values # (21613,)\n",
+        "\n",
+        "X = X.reshape(-1, 1) # (21613, 1)\n",
+        "\n",
+        "y = dataset['price'].values # array([221900., 538000., 180000., ..., 402101., 400000., 325000.])\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 1)\n",
+        "X_train.shape, X_test.shape # ((17290, 1), (4323, 1))\n",
+        "\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "regressor = LinearRegression()\n",
+        "regressor.fit(X_train, y_train)\n",
+        "\n",
+        "# b0\n",
+        "regressor.intercept_ # -30186.361061054864\n",
+        "\n",
+        "# b1\n",
+        "regressor.coef_ # array([273.82181112])\n",
+        "\n",
+        "regressor.intercept_ + regressor.coef_ * 900 # array([216253.26894848])\n",
+        "\n",
+        "regressor.predict(np.array([[900]])) # array([216253.26894848])\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "plt.scatter(X, y)\n",
+        "plt.plot(X, regressor.predict(X), color = 'red')\n",
+        "\n",
+        "regressor.score(X_train, y_train) # 0.4887607821388749\n",
+        "\n",
+        "regressor.score(X_test, y_test) # 0.5033019006466926"
+      ],
       "metadata": {
         "id": "1FHFpoWg4610"
       },
