--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN0zR4fs/yDQjeSPNGPj1Np",
+      "authorship_tag": "ABX9TyOnGPuTezwOXee0sC7HSOli",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6228,6 +6228,26 @@
       ],
       "metadata": {
         "id": "1FHFpoWg4610"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Error metrics\n",
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+        "\n",
+        "predict = regressor.predict(X_test)\n",
+        "\n",
+        "mean_absolute_error(y_test, predict) # 178578.01159005202\n",
+        "\n",
+        "mean_squared_error(y_test, predict) # 85730574276.16481\n",
+        "\n",
+        "math.sqrt(mean_squared_error(y_test, predict)) # 292797.8385783693"
+      ],
+      "metadata": {
+        "id": "Evlyx_hBSZC4"
       },
       "execution_count": null,
       "outputs": []
