Multiple linear regression

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOnGPuTezwOXee0sC7HSOli",
+      "authorship_tag": "ABX9TyOZ5iZnHATLBK4gLoW3+W3U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6248,6 +6248,58 @@
       ],
       "metadata": {
         "id": "Evlyx_hBSZC4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Multiple linear regression\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "\n",
+        "\"\"\"\n",
+        "fig, ax = plt.subplots(figsize=(15,15))\n",
+        "ax = sns.heatmap(dataset.corr(), annot=True)\n",
+        "\"\"\"\n",
+        "\n",
+        "X = dataset.iloc[:, [2, 3, 9, 10]].values\n",
+        "\n",
+        "y = dataset.iloc[:, 0].values\n",
+        "\n",
+        "\"\"\"\n",
+        "f, ax = plt.subplots(2, 2)\n",
+        "ax[0, 0].hist(X[0])\n",
+        "ax[0, 1].hist(X[1])\n",
+        "ax[1, 0].hist(X[2])\n",
+        "ax[1, 1].hist(X[3]);\n",
+        "\"\"\"\n",
+        "\n",
+        "#plt.hist(y);\n",
+        "\n",
+        "y = np.log(y)\n",
+        "\n",
+        "#plt.hist(y);\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 1)\n",
+        "\n",
+        "X_train.shape, X_test.shape # ((17290, 4), (4323, 4))\n",
+        "\n",
+        "regressor = LinearRegression()\n",
+        "\n",
+        "regressor.fit(X_train, y_train)\n",
+        "\n",
+        "regressor.score(X_train, y_train) # 0.559462085496587\n",
+        "\n",
+        "regressor.score(X_test, y_test) # 0.583736323335128\n",
+        "\n",
+        "predict = regressor.predict(X_test)\n",
+        "mean_absolute_error(y_test, predict) # 163331.28566448082"
+      ],
+      "metadata": {
+        "id": "b7FzSfu3S-sB"
       },
       "execution_count": null,
       "outputs": []
